@@ -7,14 +7,17 @@ import com.codingtrainers.duocoding.dto.output.QuestionDTO;
 import com.codingtrainers.duocoding.dto.output.ResponseDTO;
 import com.codingtrainers.duocoding.dto.output.TestExecutionDTO;
 import com.codingtrainers.duocoding.dto.output.TestExecutionResponseDTO;
-import com.codingtrainers.duocoding.dtos.QuestionFullDTO;
-import com.codingtrainers.duocoding.dtos.TestExecutionFullDTO;
+import com.codingtrainers.duocoding.dto.output.QuestionFullDTO;
+import com.codingtrainers.duocoding.dto.output.TestExecutionFullDTO;
 import com.codingtrainers.duocoding.entities.*;
 import com.codingtrainers.duocoding.repositories.*;
+
 import jakarta.persistence.EntityNotFoundException;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -35,22 +38,23 @@ public class TestExecutionService {
     private ResponseRepository responseRepository;
 
     @Autowired
-    private TestService testService;
-
-    @Autowired
     private QuestionService questionService;
 
 
-    public List<TestExecution> getTestExecutions() {
-        return testExecutionRepository.findAll();
-    }
 
+
+    public List<TestExecutionDTO> getTestExecutionsDTO() {
+        return testExecutionRepository.findAll().stream()
+                .map(TestExecutionDTO::new)
+                .collect(Collectors.toList());
+    }
 
     public List<TestExecutionDTO> getTestExecutionsByUserId(Long userId) {
         if (userId == null) {
             throw new NullPointerException("userId is null");
         }
-        List<TestExecution> testExecutions = testExecutionRepository.findByUserId(userId);
+
+        List<TestExecution> testExecutions = testExecutionRepository.findActiveByUserId(userId);
         return testExecutions.stream().map(testExecution -> {
             TestExecutionDTO testExecutionDTO = new TestExecutionDTO();
             testExecutionDTO.setId(testExecution.getId());
@@ -67,18 +71,25 @@ public class TestExecutionService {
         }).toList();
     }
 
-
-    public List<TestExecution> getTestExecutionByTest(Long  testId) {
-        Test test = new Test();
-        test.setId(testId);
-        return testExecutionRepository.findByTest(test);
-    }
     public void deleteTestExecution(Long testExecutionId) {
         testExecutionRepository.deleteById(testExecutionId);
     }
 
-    public Optional<TestExecution> getTestExecutionById(Long id) {
-        return testExecutionRepository.findById(id);
+    public Optional<TestExecutionDTO> getTestExecutionDTOById(Long id) {
+        Optional<TestExecution> optExecution = testExecutionRepository.findById(id);
+        if (optExecution.isEmpty()) return Optional.empty();
+
+        TestExecution execution = optExecution.get();
+
+        List<TestExecutionResponseDTO> responses = testExecutionResponseRepository.findActiveByTestExecutionId(id)
+                .stream()
+                .map(TestExecutionResponseDTO::new)
+                .collect(Collectors.toList());
+
+        TestExecutionDTO dto = new TestExecutionDTO(execution);
+        dto.setExecutionResponsesList(responses);
+
+        return Optional.of(dto);
     }
 
     public void saveTestExecution(TestExecutionRequestDTO dto) {
@@ -93,7 +104,7 @@ public class TestExecutionService {
         testExecution.setNotes(null);
         testExecution.setFinishTime(dto.getTimeFinish());
         testExecution.setStartTime(dto.getTimeStart());
-        testExecution.setResult(0);
+        testExecution.setResult(0F);
         testExecution.setActive(true);
 
         testExecutionRepository.save(testExecution);
@@ -101,7 +112,7 @@ public class TestExecutionService {
                 .stream()
                 .map(TestExecutionResponseRequestDTO::getQuestionId)
                 .collect(Collectors.toList());
-        List<Question> questions = questionRepository.findAllById(questionIds);
+        List<Question> questions = questionRepository.findAllActiveByIdIn(questionIds);
         Map<Long, Question> questionMap = questions.stream()
                 .collect(Collectors.toMap(Question::getId, Function.identity()));
         for (TestExecutionResponseRequestDTO responseDTO : dto.getResponses()) {
@@ -129,10 +140,10 @@ public class TestExecutionService {
     }
 
     public void saveNotesFromTeacher(NotesFromTeacherRequestDTO notes) {
-        TestExecution testExecution = testExecutionRepository.findById(notes.getTestExecutionId())
+        TestExecution testExecution = testExecutionRepository.findActiveById(notes.getTestExecutionId())
                 .orElseThrow(() -> new EntityNotFoundException("TestExecution not found with id: " + notes.getTestExecutionId()));
 
-        TestExecutionResponse testExecutionResponse = testExecutionResponseRepository.findById(notes.getTestExecutionResponseId())
+        TestExecutionResponse testExecutionResponse = testExecutionResponseRepository.findActiveById(notes.getTestExecutionResponseId())
                 .orElseThrow(() -> new EntityNotFoundException("TestExecutionResponse not found with id: " + notes.getTestExecutionResponseId()));
 
         testExecutionResponse.setNotes(notes.getTestExecutionResponseNotes());
@@ -142,35 +153,34 @@ public class TestExecutionService {
         testExecutionRepository.save(testExecution);
     }
 
-    public TestExecutionFullDTO getTestExecution(Long testExecutionId) {
 
-        TestExecution testExecution = testExecutionRepository.findById(testExecutionId).orElseThrow(()->new EntityNotFoundException("Test Execution not found"));
+    //NO FUNCIONA
+    public TestExecutionFullDTO getTestExecution(Long testExecutionId) {
+        TestExecution testExecution = testExecutionRepository.findActiveById(testExecutionId)
+                .orElseThrow(() -> new EntityNotFoundException("Test Execution not found"));
 
         Test test = testExecution.getTest();
 
         TestExecutionFullDTO dto = new TestExecutionFullDTO();
         dto.setTestId(test.getId());
         dto.setTestTitle(test.getName());
-        //TODO dto.setTestDescription(test.getDescription());
+        // TODO dto.setTestDescription(test.getDescription());
 
         List<TestQuestion> testQuestions = questionService.findTestQuestionsByTestId(test.getId());
-        List<TestExecutionResponse> testExecutionResponses = testExecutionResponseRepository.findAllByTestExecutionId(testExecutionId);
-        List<Response> responses = questionService.findAllResponsesByQuestionIds(testQuestions.stream().map(it -> it.getQuestion().getId()).toList());
+        List<TestExecutionResponse> testExecutionResponses = testExecutionResponseRepository.findActiveAllByTestExecutionId(testExecutionId);
+        List<Response> responses = questionService.findAllResponsesByQuestionIds(
+                testQuestions.stream()
+                        .map(it -> it.getQuestion().getId())
+                        .toList()
+        );
+
         Map<Long, List<Response>> responseMap = new HashMap<>();
 
-        responses.stream().forEach(it -> {
-            List<Response> questionResponses = responseMap.get(it.getQuestion().getId());
-            if (questionResponses == null) {
-                questionResponses = new ArrayList<>();
-                questionResponses.add(it);
-                responseMap.put(it.getQuestion().getId(), questionResponses);
-            } else {
-                questionResponses.add(it);
-            }
-        });
+        for (Response response : responses) {
+            responseMap.computeIfAbsent(response.getQuestion().getId(), k -> new ArrayList<>()).add(response);
+        }
 
         dto.setQuestions(testExecutionResponses.stream().map(tq -> {
-
             com.codingtrainers.duocoding.entities.Question question = tq.getQuestion();
 
             QuestionFullDTO questionDTO = new QuestionFullDTO();
@@ -186,6 +196,7 @@ public class TestExecutionService {
         return dto;
     }
 
+
 //todo Arreglar este método
 
     public TestExecutionDTO gesTestExecutionById(Long testExecutionId) {
@@ -193,7 +204,7 @@ public class TestExecutionService {
                 .orElseThrow(() -> new RuntimeException("TestExecution not found"));
 
         List<TestExecutionResponse> responseList =
-                testExecutionResponseRepository.findByTestExecutionId(testExecutionId);
+                testExecutionResponseRepository.findActiveByTestExecutionId(testExecutionId);
 
 
         Map<Long, List<Response>> allResponsesByQuestion = new HashMap<>();
@@ -204,7 +215,7 @@ public class TestExecutionService {
 
 
             allResponsesByQuestion.computeIfAbsent(question.getId(),
-                    id -> responseRepository.findByQuestionId(id));
+                    id -> responseRepository.findActiveByQuestionId(id));
 
 
             TestExecutionResponseDTO respDTO = new TestExecutionResponseDTO();
@@ -228,18 +239,18 @@ public class TestExecutionService {
             QuestionDTO questionDTO = new QuestionDTO();
             questionDTO.setDescription(question.getDescription());
             questionDTO.setType(question.getType());
-            questionDTO.setAnswer(execResp.getAnswer()); // respuesta seleccionada
+            questionDTO.setAnswer(execResp.getAnswer());
             questionDTO.setResponses(responseDTOs);
 
             return questionDTO;
-        }).collect(Collectors.toList());
+        }).toList();
 
 
         TestExecutionDTO dto = new TestExecutionDTO();
         dto.setId(execution.getId());
         dto.setTestId(execution.getTest().getId());
         dto.setUserId(execution.getUser().getId());
-        dto.setDate(Date.valueOf(execution.getDate()).toLocalDate());
+        dto.setDate(LocalDate.now());
         dto.setStartTime(execution.getStartTime());
         dto.setEndTime(execution.getFinishTime());
         dto.setResult(execution.getResult());
